--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,145 +2,260 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-deep: #0a0b0d;
+      --bg-elevated: #12141a;
+      --bg-surface: #1a1d24;
+      --bg-hover: #22262f;
+      --border-subtle: #2a2f3a;
+      --text-primary: #e8e4dc;
+      --text-secondary: #9b9589;
+      --text-muted: #5c5850;
+      --accent-gold: #c9a227;
+      --accent-gold-dim: #8b7019;
+      --accent-amber: #d4a574;
+      --accent-success: #7cb07c;
+      --accent-danger: #b06b6b;
+      --serif: 'Cormorant Garamond', Georgia, serif;
+      --mono: 'JetBrains Mono', 'SF Mono', monospace;
+    }
+
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      width: 320px;
-      font-family: system-ui, -apple-system, sans-serif;
-      font-size: 13px;
-      color: #1a1a1a;
-      background: #fafafa;
+      width: 340px;
+      font-family: var(--mono);
+      font-size: 12px;
+      color: var(--text-primary);
+      background: var(--bg-deep);
+      line-height: 1.5;
+    }
+
+    /* Subtle noise texture */
+    body::before {
+      content: '';
+      position: fixed;
+      inset: 0;
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+      opacity: 0.03;
+      pointer-events: none;
+      z-index: 9999;
     }
 
     .header {
-      background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
-      color: white;
-      padding: 14px 16px;
+      background: linear-gradient(180deg, var(--bg-elevated) 0%, var(--bg-deep) 100%);
+      border-bottom: 1px solid var(--border-subtle);
+      padding: 16px 18px;
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
 
-    .header h1 {
-      font-size: 15px;
-      font-weight: 600;
-      letter-spacing: -0.3px;
+    .logo {
+      font-family: var(--serif);
+      font-size: 18px;
+      font-weight: 500;
+      color: var(--text-primary);
+      letter-spacing: -0.02em;
+    }
+
+    .logo-accent {
+      color: var(--accent-gold);
+    }
+
+    .status-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .status-label {
+      font-size: 10px;
+      color: var(--text-muted);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
 
     .status {
       width: 8px;
       height: 8px;
       border-radius: 50%;
-      background: #22c55e;
+      background: var(--accent-success);
+      box-shadow: 0 0 8px rgba(124, 176, 124, 0.5);
+      animation: pulse 2s ease-in-out infinite;
     }
 
-    .status.offline { background: #ef4444; }
+    .status.offline {
+      background: var(--accent-danger);
+      box-shadow: 0 0 8px rgba(176, 107, 107, 0.5);
+      animation: none;
+    }
 
-    .content { padding: 16px; }
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.6; }
+    }
+
+    .content { padding: 18px; }
 
     .preview {
-      background: white;
-      border: 1px solid #e2e8f0;
-      border-radius: 8px;
-      padding: 12px;
-      margin-bottom: 12px;
+      background: var(--bg-surface);
+      border: 1px solid var(--border-subtle);
+      border-radius: 6px;
+      padding: 14px;
+      margin-bottom: 16px;
       max-height: 100px;
       overflow: hidden;
-      font-size: 12px;
-      color: #64748b;
-      line-height: 1.5;
+      font-size: 11px;
+      color: var(--text-secondary);
+      line-height: 1.6;
+      position: relative;
+    }
+
+    .preview::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 24px;
+      background: linear-gradient(transparent, var(--bg-surface));
+      pointer-events: none;
     }
 
     .preview.empty {
       text-align: center;
-      color: #94a3b8;
+      color: var(--text-muted);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 60px;
+    }
+
+    .preview.empty::after {
+      display: none;
     }
 
     .buttons {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 10px;
     }
 
     .btn {
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 8px;
-      padding: 12px 16px;
+      gap: 10px;
+      padding: 14px 18px;
       border: none;
-      border-radius: 8px;
-      font-size: 13px;
+      border-radius: 6px;
+      font-family: var(--mono);
+      font-size: 11px;
       font-weight: 500;
+      letter-spacing: 0.03em;
       cursor: pointer;
-      transition: all 0.15s;
+      transition: all 0.2s ease;
     }
 
     .btn-primary {
-      background: #1e293b;
-      color: white;
+      background: linear-gradient(135deg, var(--accent-gold-dim) 0%, var(--accent-gold) 100%);
+      color: var(--bg-deep);
+      text-transform: uppercase;
     }
 
-    .btn-primary:hover { background: #334155; }
-    .btn-primary:disabled { background: #94a3b8; cursor: not-allowed; }
+    .btn-primary:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 16px rgba(201, 162, 39, 0.3);
+    }
+
+    .btn-primary:active {
+      transform: translateY(0);
+    }
+
+    .btn-primary:disabled {
+      background: var(--bg-hover);
+      color: var(--text-muted);
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
 
     .btn-secondary {
-      background: white;
-      color: #475569;
-      border: 1px solid #e2e8f0;
+      background: var(--bg-surface);
+      color: var(--text-secondary);
+      border: 1px solid var(--border-subtle);
     }
 
-    .btn-secondary:hover { background: #f8fafc; }
+    .btn-secondary:hover {
+      background: var(--bg-hover);
+      color: var(--text-primary);
+      border-color: var(--accent-gold-dim);
+    }
 
     .message {
-      margin-top: 12px;
-      padding: 10px 12px;
-      border-radius: 8px;
-      font-size: 12px;
+      margin-top: 14px;
+      padding: 12px 14px;
+      border-radius: 6px;
+      font-size: 11px;
       display: none;
+      border: 1px solid transparent;
     }
 
     .message.success {
-      background: #dcfce7;
-      color: #166534;
+      background: rgba(124, 176, 124, 0.1);
+      border-color: rgba(124, 176, 124, 0.3);
+      color: var(--accent-success);
       display: block;
     }
 
     .message.error {
-      background: #fee2e2;
-      color: #991b1b;
+      background: rgba(176, 107, 107, 0.1);
+      border-color: rgba(176, 107, 107, 0.3);
+      color: var(--accent-danger);
       display: block;
     }
 
     .icon {
       width: 16px;
       height: 16px;
+      opacity: 0.8;
+    }
+
+    .btn:hover .icon {
+      opacity: 1;
     }
   </style>
 </head>
 <body>
   <div class="header">
-    <h1>Neural Sieve</h1>
-    <div class="status" id="status"></div>
+    <h1 class="logo">Neural<span class="logo-accent">Sieve</span></h1>
+    <div class="status-wrapper">
+      <span class="status-label">Status</span>
+      <div class="status" id="status"></div>
+    </div>
   </div>
 
   <div class="content">
-    <div class="preview" id="preview">
+    <div class="preview empty" id="preview">
       Select text on page or capture the full page
     </div>
 
     <div class="buttons">
       <button class="btn btn-primary" id="capture-btn" disabled>
         <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
         </svg>
         Capture Selection
       </button>
 
       <button class="btn btn-secondary" id="page-btn">
         <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
         </svg>
         Capture Full Page
       </button>
